2013-08-08  Frank Le Grand <frank.legrand@testplant.com>

       Merged changes from Trunk (since rev 35219) to TestPlant branch.

2013-07-08  Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

       * NSRunLoop.m: Added to the 1000's of performers log message to report the
	   target and selector of the most recent performer in an effort to identify
	   loops.
	   
2013-07-03  Frank Le Grand <frank.legrand@testplant.com>
	
       * NSDistributedLock.m: Modified behavior of tryLock to return NO if
         the lock directory we're about the create already exist. Also changed
         the exception raised when we're unable to read the lock's attributes to
         a log message along with returning NO. We suspect the latter was a
         side effect of the first issue.

2013-06-08  Doug Simons <doug.simons@testplant.com>

       * NSString.m: Implemented precomposedStringWithCanonicalMapping and its
	   decomposedString... and ...CompatibilityMapping variants when ICU is
	   available. Without ICU these just return self.
	   
2013-01-11  Doug Simons <doug.simons@testplant.com>

       * NSString.m: Don't strip trailing path separator in
        stringByAppendingPathComponent: when appending the root.
        This fixes problems where adding the components "C:\" and
        "MyFolder" would end up as "C:MyFolder" instead of
        "C:\MyFolder".

2012-10-08  Doug Simons <doug.simons@testplant.com>

        * NSURLProtocol.m: Don't quit writing to output stream when it fails because it would block.

2012-09-09  Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

        * NSDate.m: Added 10.6 Call for - dateByAddingTimeInterval:

2012-06-12  Richard Frith-Macdonald <rfm@gnu.org>

        * NSPropertyList.m: Check for nil property list argument.

2012-06-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/unix/GSRunLoopCtxt.m (-pollUntil:within:): Fix previous
	change to compile again when using select() instead of poll().
