@@ -1231,190 +1231,10 @@ static double powersOf10[] = {
 BOOL
 GSScanDouble(unichar *buf, unsigned length, double *result)
 {
-  unichar	c = 0;
-  char          mantissa[20];
-  const char    *ptr;
-  double        *d;
-  double        value;
-  double        e;
-  int	        exponent = 0;
-  BOOL	        negativeMantissa = NO;
-  BOOL		negativeExponent = NO;
-  unsigned	pos = 0;
-  int           mantissaLength;
-  int           dotPos = -1;
-  int           hi = 0;
-  int           lo = 0;
-
-  /* Skip whitespace */
-  while (pos < length && isspace((int)buf[pos]))
-    {
-      pos++;
-    }
-  if (pos >= length)
-    {
-      return NO;
-    }
-
-  /* Check for sign */
-  switch (buf[pos])
-    {
-      case '+':
-	pos++;
-	break;
-      case '-':
-	negativeMantissa = YES;
-	pos++;
-	break;
-    }
-  if (pos >= length)
-    {
-      return NO;
-    }
-
-  /* Scan the mantissa ... at most 18 digits and a decimal point.
-   */
-  for (mantissaLength = 0; pos < length && mantissaLength < 19; pos++)
-    {
-      mantissa[mantissaLength] = c = buf[pos];
-      if (!isdigit(c))
-        {
-          if ('.' != c || dotPos >= 0)
-            {
-              break;    // End of mantissa
-            }
-          dotPos = mantissaLength;
-        }
-      else
-	{
-          mantissaLength++;
-	}
-    }
-  if (dotPos < 0)
-    {
-      dotPos = mantissaLength;
-    }
-
-  if (0 == mantissaLength)
-    {
-      return NO;        // No mantissa ... not a double
-    }
-  if (19 == mantissaLength
-    || (18 == mantissaLength && pos < length && isdigit(buf[pos])))
-    {
-      return NO;        // Mantissa is too long.
-    }
-  dotPos -= mantissaLength;      // Exponent offset for decimal point
-
-  /* Convert mantissa characters to a double value
-   */
-  for (ptr = mantissa; mantissaLength > 9; mantissaLength -= 1)
-    {
-      c = *ptr;
-      ptr += 1;
-      hi = hi * 10 + (c - '0');
-    }
-  for (; mantissaLength > 0; mantissaLength -= 1)
-    {
-      c = *ptr;
-      ptr += 1;
-      lo = lo * 10 + (c - '0');
-    }
-  value = (1.0e9 * hi) + lo;
-
-  /* Scan the exponent (if any)
-   */
-  if (pos < length && ('E' == (c = buf[pos]) || 'e' == c))
-    {
-      if (++pos >= length)
-        {
-          return NO;    // Missing exponent
-        }
-      c = buf[pos];
-      if ('-' == c)
-        {
-          negativeExponent = YES;
-          if (++pos >= length)
-            {
-              return NO;    // Missing exponent
-            }
-          c = buf[pos];
-        }
-      else if ('+' == c)
-        {
-          if (++pos >= length)
-            {
-              return NO;    // Missing exponent
-            }
-          c = buf[pos];
-        }
-      while (isdigit(c))
-        {
-          exponent = exponent * 10 + (c - '0');
-          if (++pos >= length)
-            {
-              break;
-            }
-          c = buf[pos];
-        }
-    }
-
-  /* Add in the amount to shift the exponent depending on the position
-   * of the decimal point in the mantissa and check the adjusted sign
-   * of the exponent.
-   */
-  if (YES == negativeExponent)
-    {
-      exponent = dotPos - exponent;
-    }
-  else
-    {
-      exponent = dotPos + exponent;
-    }
-  if (exponent < 0)
-    {
-      negativeExponent = YES;
-      exponent = -exponent;
-    }
-  else
-    {
-      negativeExponent = NO;
-    }
-  if (exponent > 511)
-    {
-      return NO;        // Maximum exponent exceeded
-    }
-
-  /* Convert the exponent to a double then apply it to the value from
-   * the mantissa.
-   */
-  e = 1.0;
-  for (d = powersOf10; exponent != 0; exponent >>= 1, d += 1)
-    {
-      if (exponent & 1)
-        {
-          e *= *d;
-        }
-    }
-  if (YES == negativeExponent)
-    {
-      value /= e;
-    }
-  else
-    {
-      value *= e;
-    }
-
-  if (0 != result)
-    {
-      if (YES == negativeMantissa)
-        {
-          *result = -value;
-        }
-      else
-        {
-          *result = value;
-        }
-    }
-  return YES;
+  NSString *string = [[NSString alloc] initWithCharactersNoCopy:buf length:length freeWhenDone:NO];
+  NSScanner *scanner = [[NSScanner alloc] initWithString:string];
+  BOOL success = [scanner scanDouble:result];
+  [scanner release];
+  [string release];
+  return success;
 }
